<resources>
    <string name="app_name">Recycling Vision</string>
    <string name="emailErrText">There was an error sending the validation email, please try again</string>
    <string name="emailSuccessText">Success! Please check your email for a validation link.</string>
    <string name="loadingInitialPercent">0%</string>
    <string name="welcome">Recycling Vision</string>
    <string name="account_recovery_title">Recover Account</string>
    <string name="e_mail">E-Mail:</string>
    <string name="example_abc_com">example@abc.com</string>
    <string name="submit">Submit</string>
    <string name="exit">Cancel</string>
    <string name="acc_recovery_instr">Please enter the email address used to create the account:</string>
    <string name="city_recycling_link"><a href="https://www.toronto.ca/services-payments/recycling-organics-garbage/houses/what-goes-in-my-blue-bin/">https://www.toronto.ca/services-payments/recycling-organics-garbage/houses/what-goes-in-my-blue-bin/</a></string>
    <string name="link_title">Official City of Toronto \"What Goes in the Blue Bin?\" Recycling Reference Webpage:</string>
    <string name="vemail_success">Success! Check your email to validate your account.</string>
    <string name="vemail_error">An error has occurred creating your account. Please try again.</string>
    <string name="track_history">Track History?</string>
    <string name="change_npassword">Change Password</string>
    <string name="change_nlocation">Change Location</string>
    <string name="save_settings">Save Settings</string>
    <string name="logout">logout</string>
    <string name="references">REFERENCES</string>
    <string name="recover_account">Recover Account</string>
    <string name="logo">Logo</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password:</string>
    <string name="re_enter_password">Re-Enter Password:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="postal_code">Postal Code:</string>
    <string name="register">Register</string>
    <string name="dob_format">YYYY-MM-DD</string>
    <string name="username">Username:</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="city_of_toronto_website">- City of Toronto Website</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username_password_error_message">Email and/or password is incorrect</string>
    <string name="match_found">Match Found!</string>
    <string name="object_name">Object Name</string>
    <string name="incorrect_identification">Incorrect Identification?</string>
    <string name="edit_name">Edit Name</string>
    <string name="match">%Match</string>
    <string name="instructions">Instructions</string>
    <string name="go_back">Go Back</string>
    <string name="todo">TODO</string>
    <string name="result">Result</string>
    <string name="create_account">Don\'t have an account?</string>
    <string name="create_one">Create One</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="terms_of_use">TERMS OF USE</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="photo_instruction"><b>Instructions:</b> \nTake a photo of the unknown object, ensuring that it\'s in focus and in the middle of the frame</string>
    <string name="take_photo">Take Photo</string>
    <string name="analyze_photo">Analyze Photo</string>
    <string name="back">Back</string>
    <string name="image_preview">image-preview</string>
    <string name="processing">Now processing\.\.\.</string>
    <string name="click_on_the_image_above_to_visit_the_city_of_toronto_s_recycling_website">Click On the Image to Visit the City of Toronto\'s Recycling Website</string>
    <string name="password_reset">Password Reset</string>
    <string name="email_text">Email :</string>
    <string name="old_password">Old Password :</string>
    <string name="new_password">New Password :</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="check_email">Please check your email for further instructions</string>
</resources>