<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultOverlay">

    <TextView
        android:id="@+id/matchResult"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center"
        android:text="@string/match_found"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/objectImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matchResult"
        tools:layout_editor_absoluteX="0dp"
        tools:srcCompat="@tools:sample/avatars[2]"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objectImage">

        <TextView
            android:id="@+id/matchProbability"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/match"
            android:textColor="#000000"
            android:textSize="18sp"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/objectName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/object_name"
            android:textColor="#000000"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/instructions"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_button"
            android:text="@string/go_back"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="18sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>