<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/recoverAccount_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_recovery_title"
            android:textSize="45sp"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/recoverAccount_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/acc_recovery_instr"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/recoverAccount_buttons"
        app:layout_constraintTop_toBottomOf="@id/recoverAccount_text"/>

    <EditText
        android:id="@+id/recoveryEmail"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:hint="@string/example_abc_com"
        android:inputType="textEmailAddress"
        android:maxLength="254"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recoverAccount_instructions" />

        <LinearLayout
            android:id="@+id/recoverAccount_buttons"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recoveryEmail">

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:background="@drawable/ic_button"
                android:textColor="@color/White"
                android:textSize="18sp"
                android:text="@string/submit"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/exitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/ic_button"
                android:textColor="@color/White"
                android:textSize="18sp"
                android:text="@string/exit"
                android:layout_gravity="center"/>

        </LinearLayout>


        <TextView
            android:id="@+id/recAccountMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/check_email"
            android:layout_gravity="center"
            android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>