<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.PasswordReset"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="176dp"
        android:layout_height="66dp"
        android:layout_marginTop="50dp"
        android:text="@string/password_reset"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="111dp"
        android:layout_height="44dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/email_text"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/edtTxtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:maxLength="254"
        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
        app:layout_constraintStart_toEndOf="@+id/txtEmail"
        app:layout_constraintTop_toTopOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="111dp"
        android:layout_height="44dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/old_password"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/edtTxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:maxLength="32"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtEmail"
        app:layout_constraintStart_toEndOf="@+id/txtEmail"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="111dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:text="@string/new_password"
        android:textColor="#000000"
        android:textSize="18sp"
        android:maxLength="32"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/edtTxtNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtPassword"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:background="@drawable/ic_button"
        android:textColor="@color/White"
        android:text="@string/reset"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:background="@drawable/ic_button"
        android:textColor="@color/White"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/btnReset"
        app:layout_constraintStart_toStartOf="@+id/btnReset"
        app:layout_constraintTop_toBottomOf="@+id/btnReset" />
</androidx.constraintlayout.widget.ConstraintLayout>